<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/smart_outlet_overview_add_operation_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/smart_outlet_overview_add_operation_week_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="12"
        android:hint="@string/smart_outlet_overview_add_operation_day_of_week"
        android:fontFamily="sans-serif-thin"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/smart_outlet_overview_add_operation_start_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="12"
        android:hint="@string/smart_outlet_overview_add_operation_starting_hour"
        android:fontFamily="sans-serif-thin"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smart_outlet_overview_add_operation_week_day" />

    <EditText
        android:id="@+id/smart_outlet_overview_add_operation_start_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="12"
        android:hint="@string/smart_outlet_overview_add_operation_starting_minute"
        android:fontFamily="sans-serif-thin"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smart_outlet_overview_add_operation_start_hour" />

    <EditText
        android:id="@+id/smart_outlet_overview_add_operation_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="12"
        android:hint="@string/smart_outlet_overview_add_operation_duration"
        android:fontFamily="sans-serif-thin"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smart_outlet_overview_add_operation_start_minute"/>

</android.support.constraint.ConstraintLayout>